fix almost unreadable tooltip text color

--- a/conf/finto.fi/finto.css
+++ b/conf/finto.fi/finto.css
@@ -37,6 +37,9 @@ p {
   color: #474b4f;
 }
 
+.tooltip-html-content .versal {
+  color: white;
+}
 
 .concept-spinner {
 	background:url("../finto-pics/finto-alt.gif") no-repeat transparent;
